Lagt till Client factory för dynamoDB. Lagt till grund för user model. Lagt till grund för Repository. Fixat SonarCube "fixar"